# tidal-midi-synth-template

./: CustomSynth.cabal  CustomSynth.hs  LICENSE  readme.md
